Added: Spacing to paragraphs

--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -3,8 +3,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout
-  title="About us - Boomger."
-  content="About us - Boomger. - One Night Stand Entertainment, the innovative force behind One Night, the premier dating app designed to connect people for whatever they seek—be it a spark, a relationship, a date, a hookup, or a one-night stand. We are committed to creating an inclusive and dynamic platform that caters to diverse romantic and social needs."
+  title="Contact us - Boomger."
+  description="About us - Boomger. - One Night Stand Entertainment, the innovative force behind One Night, the premier dating app designed to connect people for whatever they seek—be it a spark, a relationship, a date, a hookup, or a one-night stand. We are committed to creating an inclusive and dynamic platform that caters to diverse romantic and social needs."
 >
   <main
     class="mx-6 sm:mx-12 lg:mx-24 mb-20 max-w-7xl py-12 flex flex-col lg:flex-row gap-22.75 text-lg min-h-[calc(100vh-576px)] items-center md:w-[-webkit-fill-available]"
