--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -33,7 +33,7 @@ import logo from "../assets/boomger.png";
       X
     </button>
     <a href="/about-us" class="px-3 hover:underline">About Us</a>
-    <a href="/guideline" class="px-3 hover:underline">How it works</a>
+    <a href="/#howItWorks" class="px-3 hover:underline">How it works</a>
     <a href="/guideline" class="px-3 hover:underline">Communities</a>
     <a href="/privacy-policy" class="px-3 hover:underline">Safety</a>
     <a href="/eula" class="px-3 hover:underline">EULA</a>
