Updated: Owner's recommendations

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -17,7 +17,7 @@ import matching from "../assets/matching_simple.png";
     class="md:bg-none mt-12 flex flex-col md:flex-row mx-6 sm:mx-12 lg:mx-24 max-w-7xl md:gap-6 md:my-28"
   >
     <div class="rounded-3xl px-1.5 pt-4.5 bg-[#F9F6FF] md:py-8 pb-21.5 md:px-6">
-      <Image src={realTime} alt="home page" class="w-full" />
+      <Image src={realTime} alt="Some users' profile" class="w-full" />
       <h3 class="mb-3 mt-6">Real-time, real people</h3>
       <p>
         Meet people who are actually nearby and ready to hang out. Whether it’s
@@ -28,7 +28,7 @@ import matching from "../assets/matching_simple.png";
     <div
       class="bg-[#E8E8E8] py-8 px-6 rounded-3xl relative bottom-9 md:bottom-0"
     >
-      <Image src={dating} alt="" class="w-full" />
+      <Image src={dating} alt="A screenshot of boomger app" class="w-full" />
       <h3 class="mb-3 mt-6">More than dating</h3>
       <p>
         Boomger isn’t just about dating—it’s about belonging. Join groups based
@@ -56,7 +56,7 @@ import matching from "../assets/matching_simple.png";
         </ul>
         <p>Because feeling safe is attractive.</p>
       </div>
-      <Image src={safe} alt="home page" />
+      <Image src={safe} alt="An illustration of Boomger's security features" />
     </div>
   </section>
 
@@ -75,7 +75,7 @@ import matching from "../assets/matching_simple.png";
     </p>
     <img
       src="/desktop-carousel.png"
-      alt=" "
+      alt="Some users"
       class="h-24 mt-6 lg:mt-0 min-w-[120%] lg:w-full lg:h-56 lg:min-w-0 block lg:mx-24 max-w-7xl"
     />
     <!-- <div class="flex gap-3 w-screen overflow-x-hidden relative">
@@ -122,7 +122,7 @@ import matching from "../assets/matching_simple.png";
   >
     <Image
       src={matching}
-      alt=""
+      alt="A girl operating her phone"
       class="rounded-3xl md:rounded-b-none md:w-1/2"
     />
     <div class="md:self-center">
