--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -17,7 +17,7 @@ import facebook from "../assets/facebook.png";
     class="grid md:grid-cols-3 gap-10 mx-6 sm:mx-12 lg:mx-24 max-w-7xl lg:w-[-webkit-fill-available]"
   >
     <a href="/">
-      <Image src={logo} alt="" class="mx-auto lg:mx-0" />
+      <Image src={logo} alt="Go to boomger home page" />
     </a>
     <div class="lg:mx-auto">
       <h4 class="mb-2">Quick Links</h4>
@@ -32,35 +32,35 @@ import facebook from "../assets/facebook.png";
     <div class="lg:ml-auto">
       <h4>Connect With US</h4>
       <span class="flex gap-6 mt-2.5 mb-3.5 lg:my-6">
-        <a href="">
-          <Image src={youtube} alt="" class="h-9" />
+        <a href="https://www.youtube.com/@boomgerdatingapp">
+          <Image src={youtube} alt="Visit our Youtube page" class="h-9" />
         </a>
-        <a href="">
-          <Image src={facebook} alt="" class="h-9" />
+        <a href="https://www.facebook.com/share/1FQTWqZFjR">
+          <Image src={facebook} alt="Visit our Facebook page" class="h-9" />
         </a>
-        <a href="">
-          <Image src={instagram} alt="" class="h-9" />
+        <a href="https://www.instagram.com/boomgerdatingapp?igsh=dHA5aWs3YzZ3ajdz">
+          <Image src={instagram} alt="Visit our Intagram page" class="h-9" />
         </a>
-        <a href="">
-          <Image src={twitter} alt="" class="h-9" />
+        <a href="https://x.com/Boomger_dating">
+          <Image src={twitter} alt="Visit our Twitter page" class="h-9" />
         </a>
-        <a href="">
-          <Image src={tiktok} alt="" class="h-9" />
+        <a href="http://tiktok.com/@boomgerdatingapp">
+          <Image src={tiktok} alt="Visit our Tiktok page" class="h-9" />
         </a>
       </span>
       <span class="flex gap-7">
         <a href=""
-          ><Image src={googlePlay} alt="" class="px-2.5 py-1.5 h-8 w-24" /></a
+          ><Image src={googlePlay} alt="Download our app on Play store" class="px-2.5 py-1.5 h-8 w-24" /></a
         ><a href=""
-          ><Image src={appStore} alt="" class="px-2.5 py-1.5 h-8 w-24" /></a
+          ><Image src={appStore} alt="Download our app on app store" class="px-2.5 py-1.5 h-8 w-24" /></a
         >
       </span>
     </div>
   </div>
-  <h4 class="px-4 text-center hidden lg:block mt-36">
-    Copyright ©️ 2026 ... All rights reserved.
-  </h4>
-  <p class="px-4 text-center mt-12 lg:hidden font-semibold">
-    © Boomger. All rights reserved.
+  <p class="px-4 font-semibold text-center lg:text-2xl lg:text-white mt-12 lg:mt-36">
+    Copyright ©️ 2026 Boomger. All rights reserved.
   </p>
+  <!-- <p class="px-4 text-center mt-12 lg:hidden font-semibold">
+    © Boomger. All rights reserved.
+  </p> -->
 </footer>
