--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -35,13 +35,13 @@ import phone from "../assets/on_phone.png";
       </a>
     </div>
   </div>
-  <div class="flex flex-col lg:flex-row lg:mt-28 gap-7 lg:px-24">
-    <div class="mt-10 text-center lg:text-left px-12">
+  <div class="flex flex-col xl:flex-row xl:mt-28 gap-7 xl:px-24">
+    <div class="mt-10 text-center xl:text-left px-12">
       <p class="text-xl mt-10">Your Dating, Upgraded</p>
-      <p class="text-[32px] lg:text-5xl font-semibold mt-5">
+      <p class="text-[32px] xl:text-5xl font-semibold mt-5">
         A smarter, more intentional way to connect
       </p>
     </div>
-    <Image src={phone} alt="home page" class="mx-auto" />
+    <Image src={phone} alt="Screenshot of boomger app on phone" class="mx-auto" />
   </div>
 </section>
