--- a/src/components/howItWorks.astro
+++ b/src/components/howItWorks.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import match from "../assets/match_in_seconds.png";
+import match from "../assets/match.png";
 ---
 
 <div
@@ -9,7 +9,7 @@ import match from "../assets/match_in_seconds.png";
 >
   <Image
     src={match}
-    alt="home page"
+    alt="A boy and a girl on a dinner date"
     class="xl:border-l-20 xl:border-[#D9D9D9] md:bg-[#D9D9D9] rounded-3xl md:w-1/2"
   />
   <div class="">
