--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout
   title="Contact us - Boomger."
-  description="About us - Boomger. - One Night Stand Entertainment, the innovative force behind One Night, the premier dating app designed to connect people for whatever they seek—be it a spark, a relationship, a date, a hookup, or a one-night stand. We are committed to creating an inclusive and dynamic platform that caters to diverse romantic and social needs."
+  description="Get in touch with Boomger. Contact us today for inquiries, support, or collaboration --we're here to help"
 >
   <main
     class="mx-6 sm:mx-12 lg:mx-24 mb-20 max-w-7xl py-12 flex flex-col lg:flex-row gap-22.75 text-lg min-h-[calc(100vh-576px)] items-center md:w-[-webkit-fill-available]"
@@ -36,7 +36,7 @@ import Layout from "../layouts/Layout.astro";
         </a>
         <a
           class="bg-[#28282B] w-full h-34 text-white flex items-center px-10 justify-between gap-7"
-          href="tel:07000039088"
+          href="tel:+442042948814"
         >
           <svg
             width="35"
@@ -52,9 +52,9 @@ import Layout from "../layouts/Layout.astro";
               stroke-linecap="round"
               stroke-linejoin="round"></path>
           </svg>
-          <p>070-0003-9088</p>
+          <p>+44 204 294 8814</p>
         </a>
-        <a
+        <span
           class="bg-[#28282B] w-full h-34 text-white flex items-center px-10 justify-between gap-7"
           href=""
         >
@@ -70,8 +70,8 @@ import Layout from "../layouts/Layout.astro";
               d="M4.375 30.625V4.375H26.25V30.625M0 0V35H30.625V26.25L35 21.875L30.625 17.5L35 13.125L30.625 8.75L35 4.375L30.625 0M13.125 13.125L8.75 17.5L13.125 24.0625H17.5L21.875 17.5L17.5 13.125M21.875 13.125L17.5 21.875H13.125L8.75 13.125L13.125 8.75H21.875"
               fill="white"></path>
           </svg>
-          <p class="flex-1 text-right">15 Plymouth, United Kingdom, England.</p>
-        </a>
+          <p class="flex-1 text-right">300 Creek View Road, Newark Newcastle 19711.</p>
+        </span>
       </div>
     </div>
     <!-- Contact Form -->
