Added: og images generator

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -17,7 +17,7 @@ import facebook from "../assets/facebook.png";
     class="grid md:grid-cols-3 gap-10 mx-6 sm:mx-12 lg:mx-24 max-w-7xl lg:w-[-webkit-fill-available]"
   >
     <a href="/">
-      <Image src={logo} alt="Go to boomger home page" />
+      <Image src={logo} alt="Go to boomger home page" class="w-36 lg:w-48" />
     </a>
     <div class="lg:mx-auto">
       <h4 class="mb-2">Quick Links</h4>
