--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -4,6 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout
   title="Contact us - Boomger."
+  slug="contact-us"
   description="Get in touch with Boomger. Contact us today for inquiries, support, or collaboration --we're here to help"
 >
   <main
@@ -36,7 +37,7 @@ import Layout from "../layouts/Layout.astro";
         </a>
         <a
           class="bg-[#28282B] w-full h-34 text-white flex items-center px-10 justify-between gap-7"
-          href="tel:+442042948814"
+          href="tel:+12042948814"
         >
           <svg
             width="35"
@@ -52,7 +53,7 @@ import Layout from "../layouts/Layout.astro";
               stroke-linecap="round"
               stroke-linejoin="round"></path>
           </svg>
-          <p>+44 204 294 8814</p>
+          <p>+1 204 294 8814</p>
         </a>
         <span
           class="bg-[#28282B] w-full h-34 text-white flex items-center px-10 justify-between gap-7"
