--- a/src/pages/eula.astro
+++ b/src/pages/eula.astro
@@ -4,6 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout
   title="End User License Agreement (EULA) - Boomger."
+  slug="eula"
   description="Read Boomger’s End User License Agreement (EULA) outlining user rights, responsibilities, app usage terms, legal conditions, and platform policies."
 >
   <main
@@ -87,7 +88,7 @@ import Layout from "../layouts/Layout.astro";
       </p>
 
       <p class="text-zinc-700">
-        Phone: +234 916 794 8683<br />
+        Phone: +1 204 294 8814<br />
          Email:
         <a
           href="mailto:info@boomger.com"
