--- a/src/pages/guideline.astro
+++ b/src/pages/guideline.astro
@@ -4,6 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout
   title="Community Guidelines - Boomger."
+  slug="guideline"
   description="Read Boomger’s Community Guidelines outlining acceptable behavior, safety standards, and rules designed to keep the platform respectful and secure for everyone."
 >
   <main
