--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout
-title="Privacy Policy - Boomger."
-  description="Boomger is a modern dating app for real connections. Discover nearby matches, join local communities, and connect with intention, authenticity, and safety." >
+title= "Boomger – A Dating App for Real Connections"
+  description= "Boomger is a modern dating app for real connections. Discover nearby matches, join local communities, and connect with intention, authenticity, and safety."
+  slug="" >
 	<Welcome />
 </Layout>
