--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -4,6 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout
   title="Privacy Policy - Boomger."
+  slug="privacy-policy"
   description="Learn how Boomger collects, uses, protects, and handles your personal data. Our Privacy Policy explains your rights and data protection practices."
 >
   <main
@@ -177,7 +178,7 @@ import Layout from "../layouts/Layout.astro";
       <h2 class="text-2xl font-semibold">8. Contact Us</h2>
 
       <p class="text-zinc-700">
-        Phone: +234 70000000000<br />
+        Phone: +1 204 294 8814<br />
          Email: <a
           href="mailto:info@boomger.com"
           class="underline font-medium hover:text-black">info@boomger.com</a
